--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -8,27 +8,27 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <h1>CSS Bayan</h1>
     <div class="content">
-        <h1>CSS Bayan</h1>
         <div class="box">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            <img src="img/icon.png" alt="+" class="icon">
-            <img src="img/cat1.jpg" alt="Cat Knight" class="image">
+            <p class="txt" id="txt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <img src="img/icon.png" alt="+" class="icon" id="icon1"></p>
+            <p class="image" id="img1"><img src="img/cat1.jpg" alt="Cat Knight"></p>
         </div>
         <div class="box">
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            <img src="img/icon.png" alt="+" class="icon">
-            <img src="img/cat2.jpg" alt="Cat Knight" class="image">
+            <p class="txt">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <img src="img/icon.png" alt="+" class="icon"></p>
+            <p class="image"><img src="img/cat2.jpg" alt="Cat Knight"></p>
         </div>
         <div class="box">
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            <img src="img/icon.png" alt="+" class="icon">
-            <img src="img/cat3.jpg" alt="Cat Knight" class="image">
+            <p class="txt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            <img src="img/icon.png" alt="+" class="icon"></p>
+            <p class="image"><img src="img/cat3.jpg" alt="Cat Knight"></p>
         </div>
         <div class="box">
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            <img src="img/icon.png" alt="+" class="icon">
-            <img src="img/cat4.jpg" alt="Cat Knight" class="image">
+            <p class="txt">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <img src="img/icon.png" alt="+" class="icon"></p>
+            <p class="image"><img src="img/cat4.jpg" alt="Cat Knight"></p>
         </div>
     </div>
 </body>
